2004-06-28 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * src/gdcmDocument.cxx: for broken (non DICOM V3 conformal) images
     (e.g. gdcm-JPEG-LossLess3a.dcm see comments in
     gdcm/gdcmPython/testSuite.py for details) ::FindDocLengthOB() had
     and ad-hoc kludge. This kludge is now removed, and on encountering
     such an image (OB field brain damaged) we set errno. Then in 
     ::FindDocLength() we "fix" the length as being ALL what remains
     in the file (until EOF). We then proceed, hoping for the best...
     This fixes a SegFault in ShowDicom when trying to write such an
     image.
   * Test/CmakeList.txt: 8BitsRunLengthColor.dcm is now blacklisted
     (because TestWriteRead breaks on it, after a non conformal commit?).
     ctest now runs properly, except for MakeDicomDir (which was allways
     broken) and the Python related stuff (still not fixed).
2004-06-24 Jean-Pierre Roux
  ADD : Examples/WriteRead, that acts like the former Test/TestWriteRead
  FIX : Test/TestReadWrite now iterates on all the file names 
                          (instead of infinite loop)
  ENH : Test/TestWriteRead now iterates on all the file names 

2004-06-28 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * Test/TestReadWrite.cxx: now uses all the images of gdcmData.

2004-06-24 Jean-Pierre Roux
   FIX : - now Write drops LUT Descriptors and LUTs (if any)
	            when SamplesPerPixel =3
         - now Write is no longer confused by 
			      'BitsAllocated = 12" and 'BitsStored=12"
         - "UN" value representation Elements are now written correctly 
               (their legth is stored on 4 bytes -just like OB, OW, and SQ-)									
   ENH : - now gdcmHeader has its own Write methods 
	            (in order to split the job that has not to be done 
					for gdcmDicomDir)

2004-06-23 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * Test/PrintAllDocument.cxx: looping on files is now effective. It used to
     loop on the same image until memory went out. 